<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="69dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="413dp"
        app:srcCompat="@drawable/humber" />

    <EditText
        android:id="@+id/edittextone"
        android:layout_width="241dp"
        android:layout_height="59dp"
        android:layout_marginStart="170dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="30dp"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edittextwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="170dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="311dp"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="240dp"
        android:layout_height="80dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="280dp"
        android:text="N0127381"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="143dp"
        android:layout_height="31dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="218dp"
        android:layout_marginBottom="307dp"
        android:text="@string/StudentID"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="297dp"
        android:layout_marginBottom="250dp"
        android:text="@string/Message"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginEnd="145dp"
        android:layout_marginBottom="168dp"
        android:text="@string/Activity1"
        android:textSize="35sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="101dp"
        android:text="@string/ToActivity2" />

</RelativeLayout>